# pythonwa

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: aws.yml
apis/events_list/: lambda_handler.py  meetup_models.py  pythonwa_models.py
apis/slack_invite/: lambda_handler.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: Conduct.vue  Sponsor.vue  Sponsors.vue
infrastructure/: pythonwa.py
infrastructure/lambda_layers/: requirements.txt
infrastructure/lambda_layers/default_layer/: pyproject.toml
infrastructure/lambda_layers/markdown_layer/: pyproject.toml
infrastructure/stacks/: static_site.py
tests/: conftest.py  mock_aws_lambda_context.py  mock_aws_test_events.py  test_events_list.py
