[project]
name = "pythonwa"
version = "3.1.9"
description = "PythonWA website"
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "aws-cdk-lib~=2.166",
    "aws-lambda-typing~=2.20",
    "boto3<=2.0",
    "markdown~=3.6",
    "pydantic~=2.10",
    "requests~=2.32",
]

[dependency-groups]
dev = [
    "segno~=1.6.1",
    "qrcode-artistic~=3.0.2",
    "pillow>=10.3.0",
]

[tool.uv.sources]


# RUFF settings
[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = [
  "C",  # mccabe rules
  "F",  # pyflakes rules
  "E",  # pycodestyle error rules
  "W",  # pycodestyle warning rules
  "B",  # flake8-bugbear rules
  "I",  # isort rules
]
ignore = [
  # "C901",  # max-complexity-10
  "E501",  # line-too-long
]

# LEGACY Formatting settings - Keeping these to allow for these tools to run compatibily with Ruff.
[tool.isort]
profile = "black"
line_length = 99
py_version=313
known_third_party = ["boto", "botocore", "django", "rest_framework"]

[tool.black]
line-length = 99
target-version = ['py313']
force-exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
    | migrations
)
'''
